--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>ДЗ 1. Знакомство с JS</h1>
+        <h1>ДЗ 3. Условные конструкции. Циклы. Math, Date()</h1>
     </div>
 
 
